2006-06-21  Martin Baulig  <martin@ximian.com>

	* statement.cs (GotoCase.Resolve): Report a warning (CS0469)
	instead of an error if the value is not implicitly convertible to
	the switch types; fixes #77964.

2006-06-21  Raja R Harinath  <rharinath@novell.com>

	Fix #78673
	* class.cs (FieldBase.ResolveInitializer): Stop resolution if
	FieldBuilder is null.

	Fix #78662
	* expression.cs (Binary.CheckShiftArguments): Don't overwrite original
	'left' and 'right' before error-checking.

2006-06-19  Martin Baulig  <martin@ximian.com>

	* convert.cs
	(Convert.ImplicitConversionStandard): Cleanup and correctly
	implement nullable conversions.
	(Convert.ImplicitStandardConversionExists): Likewise.
	(Convert.ExplicitConversion): Likewise.

2006-06-19  Martin Baulig  <martin@ximian.com>

	* generic.cs
	(Nullable.Wrap.Create, Nullable.Unwrap.Create): New public static
	methods; make the ctors protected.

2006-06-19  Martin Baulig  <martin@ximian.com>

	Fixed #78380; added gtest-273.cs.

	* ecore.cs
	(Expression.ResolveAsBaseTerminal): Move the constraint checking
	into ResolveAsTypeTerminal().

	* generic.cs
	(ConstraintChecker.HasDefaultConstructor): Use the non-cache based
	TypeManager.FindMembers() to check for the default ctor.

2006-06-18  Marek Safar  <marek.safar@seznam.cz>

	* generic.cs: Fixed NullableInfo accessibility.

2006-06-16  Martin Baulig  <martin@ximian.com>

	* generic.cs
	(Constraints.InflatedConstraints.inflate): Correctly inflate
	generic types; fixes #78400.

2006-06-16  Juraj Skripsky  <js@hotfeet.ch>

	* ecore.cs (SimpleName.Error_ObjectRefRequired): Do not truncate the name.
	Fixed bug #78601.
	(MemberExpr.EmitInstance): Use GetSignatureForError () to get full name.
	(FieldExpr.DoResolve): likewise.
	(PropertyExpr.InstanceResolve): likewise.
	(EventExpr.InstanceResolve): likewise. 

2006-06-15  Martin Baulig  <martin@ximian.com>

	* statement.cs
	(SwitchLabel.ResolveAndReduce): Added `bool allow_nullable'