@@ -1,5 +1,10 @@
 2006-06-21  Martin Baulig  <martin@ximian.com>
 
+	* test-anon-26.cs: Removed - this test case must not compile;
+	and we're now correctly reporting the CS1686.
+
+2006-06-21  Martin Baulig  <martin@ximian.com>
+
 	* test-49.cs: Add test case for #77964.
 
 2006-06-16  Raja R Harinath  <rharinath@novell.com>
