@@ -1,5 +1,10 @@
 2006-06-21  Martin Baulig  <martin@ximian.com>
 
+	* expression.cs (Unary.ResolveOperator): In `Operator.AddressOf',
+	also report CS1686 for parameters.
+
+2006-06-21  Martin Baulig  <martin@ximian.com>
+
 	* statement.cs (GotoCase.Resolve): Report a warning (CS0469)
 	instead of an error if the value is not implicitly convertible to
 	the switch types; fixes #77964.
